# ai-coder-kanban

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: ai.py  auth.py  chat.py  db.py  main.py  seed.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_chat.py  test_health.py
docs/: DATABASE.md  PLAN.md
frontend/: AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AddCardForm.tsx  App.tsx  Board.tsx  Card.tsx  CardView.tsx  Chat.test.tsx  Chat.tsx  Column.tsx  Login.tsx
frontend/e2e/: auth.spec.ts  board.spec.ts  chat.spec.ts  helpers.ts
frontend/lib/: api.ts  seed.ts  types.ts  useBoard.test.ts  useBoard.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
