[project]
name = "kanban-backend"
version = "0.1.0"
description = "FastAPI backend for the Kanban MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "openai>=2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
